fix header overflow

--- a/app/assets/stylesheets/pages/homepage.scss
+++ b/app/assets/stylesheets/pages/homepage.scss
@@ -65,14 +65,13 @@
       
       &.righted {
         left: 100%;
-        height: 0;
-        width: 0;
-        overflow: hidden;
-        @include transition(left .35s ease 0, right .35s ease 0, height 0 ease .35s, width 0 ease .35s);
       }
 
       &.lefted {
         left: -100%;
+      }
+
+      &.righted, &.lefted {
         height: 0;
         width: 0;
         overflow: hidden;
