--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -5,6 +5,7 @@ header {
   width: 100%;
   position: absolute;
   top: 0;
+  overflow: hidden;
 
   .boggwon {
     float: left;
